# MultiMerge

./: .gitignore  CMakeLists.txt  MultiMerge.pro  MultiMerge.pro.user.-1  README.md  TimeParser.cpp  TimeParser.h  TimePoint.cpp  TimePoint.h  output.txt  testparser.cpp
cli/: main.cpp
core/: DataFileMerger.cpp  DataFileMerger.h  Interpolator.cpp  Interpolator.h  StreamMergeEngine.cpp  StreamMergeEngine.h
docs/: README.md
docs/architecture/: StreamMergeEngine_2.md  StreamMergeEngine_3.md  StreamMergeEngine_4.md  StreamMergeEngine_建议.md  day5_1.txt  performance-optimization-design.md  progress-gap-analysis.md  project-requirements.md  project-status-v4.md  stream-merge-engine-implementation.md  stream-merge-engine-v2.md  stream-merge-engine-v3.md  time-system-overview.md  work-summary-and-plan.md  新建 文本文档.txt
docs/contracts/: cli-text-updates.md  code-change-list.md  merge-behavior-spec.md  multimerge-behavior-spec-v1.md  time-format-conversion.md
docs/refactor/: multimerge-checklist.md  multimerge-org-summary.md  time-system-cleanup-v2.md
io/: FileReader.cpp  FileReader.h
src/io/: FileReader.cpp  FileReader.h
src/utils/: DelimiterDetector.cpp  DelimiterDetector.h
tests/: correctness_report.md  day4_chaos_report.md  day4_complex_report.md  day5_final_report.md  day5_semantic_audit.md  run_tolerance_tests.ps1  tolerance_fix_final_report.md  tolerance_fix_report.md  tolerance_test_results.md
tests/expected/: btype_linear.txt  btype_nearest.txt  chaos_c1_linear.txt  chaos_c1_nearest.txt  chaos_c2_linear.txt  chaos_c3_linear.txt  chaos_c3_nearest.txt  disjoint_nearest.txt  gold_a_exact.txt  gold_a_nearest.txt  gold_b_exact.txt  gold_b_linear.txt  gold_b_nearest.txt  gold_c_exact.txt  gold_c_linear.txt  gold_c_nearest.txt  mixed_linear.txt  mixed_nearest.txt  multic_nearest.txt
tests/input/: 01_dot_ms.txt  02_dot_us.txt  03_colon_ms.txt  04_colon_us.txt  README.md  abc_a_file.txt  abc_b_file.txt  abc_c_file.txt  btype_file1.txt  btype_file2.txt  chaos_c1_file2.txt  chaos_c2_file2.txt  chaos_c3_file2.txt  disjoint_file2.txt  gold_a1_file1.txt  gold_a1_file2.txt  gold_b1_file2.txt  gold_c1_file1.txt  gold_c1_file2.txt  mega_a2.txt  mega_b.txt  mega_c1.txt  mega_c2.txt  mixed_a1_file1.txt  mixed_b1_file2.txt  mixed_c1_file3.txt  multic_file1.txt  multic_file2.txt  multic_file3.txt  neg_empty.txt  sensor1.txt  sensor2.txt  tol_c_file1.txt  tol_c_file2.txt  tol_file1.txt  tol_file2.txt  tol_t1_base.txt  tol_t1_src.txt
tests/output/: README.md  gold_a_legacy_linear.txt  gold_a_stream_exact.txt  gold_a_stream_nearest.txt  gold_b_legacy_linear.txt  gold_b_legacy_nearest.txt  gold_b_stream_exact.txt  gold_c_legacy_exact.txt  gold_c_legacy_linear.txt  gold_c_stream_exact.txt  gold_c_stream_nearest.txt  test01_dotms_colonus.txt  test02_dotus_colonms.txt  test03_colonms_dotus.txt  test04_colonus_dotms.txt  test05_sensor_merge.txt
tests/output_day4/: abc_test.txt  (+14 more)
tools/: deploy.bat  qt5_trae_vars.bat
utils/: DelimiterDetector.cpp  DelimiterDetector.h
(+81 files in other folders)
